Added arrow animation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Kweyy.de</title>
 </head>
 <body>
-    hello im kweyy
+    <header>
+        
+    </header>
+    <main>
+        <p class="arrowDown">
+            <img class="animation" src="PfeilUnten.png" alt="ArrowDown">
+        </p>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
